--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^16.0.1",
+    "@contentful/rich-text-types": "^17.0.0",
     "@mantine/code-highlight": "^7.16.3",
     "@mantine/core": "^7.16.3",
     "@mantine/hooks": "^7.16.3",
